# mate-file-manager-share

./: ChangeLog  INSTALL  MAINTAINERS  README  autogen.sh  caja-share.doap  configure.ac  debug-net-usershare  my-configure  my-diff
po/: ChangeLog  POTFILES.in  ar.po  as.po  ast.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  kn.po  ko.po  lt.po  lv.po  ml.po  mr.po  nb.po  oc.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+11 more)
src/: Makefile.am  caja-share.c  caja-share.h  mate-file-manager-share.c  shares.c
